tdf#94221 repair dialog for text along path

This corrects some errors in converting old kind dialog to
glade. Separator items are count too, but were not considered.
Therefore button and action were not sync. Two RADIOCHECK and
CHECKABLE were wrong.

Change-Id: Ie2c2f2febe7f7264fd08b8847dc72c3ee8d49a8c
Reviewed-on: https://gerrit.libreoffice.org/24684
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>
(cherry picked from commit b8528dcb9c0c5ee75742df3c0e5ee9f373fbf154)
Reviewed-on: https://gerrit.libreoffice.org/24795
(cherry picked from commit 77191f727fdf844e3780d5c1aec8225b344718e7)